[gd_scene load_steps=10 format=3 uid="uid://cacdelfr4uu2g"]

[ext_resource type="PackedScene" path="res://UI/MainScreen/MainScreen.tscn" id="1"]
[ext_resource type="PackedScene" path="res://UI/Menus/Sounds/MenuSoundPlayer.tscn" id="2"]
[ext_resource type="Theme" path="res://UI/theme_main_menu.tres" id="3"]
[ext_resource type="Texture2D" uid="uid://bkt0tvra3cipm" path="res://UI/MainScreen/gamepads/xbox_a_button.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://djkbp7tvbdq7k" path="res://UI/MainScreen/gamepads/playstation_cross_buttton.svg" id="5"]
[ext_resource type="Texture2D" uid="uid://fn1o8f803s27" path="res://UI/MainScreen/gamepads/nintendob_button.svg" id="6"]
[ext_resource type="Script" path="res://UI/MainMenuTexts.gd" id="7"]
[ext_resource type="Script" path="res://UI/MainMenu.gd" id="8"]
[ext_resource type="PackedScene" path="res://UI/ScreenFader.tscn" id="9"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3")
script = ExtResource("8")

[node name="Background" type="Control" parent="."]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainScreen" parent="Background" instance=ExtResource("1")]
anchors_preset = 0

[node name="Context" type="Control" parent="."]
anchors_preset = 0
anchor_left = 0.6
anchor_top = 0.6
anchor_right = 0.95
anchor_bottom = 0.75
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0

[node name="Texts" type="Control" parent="Context"]
anchors_preset = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("7")

[node name="HBoxContainer" type="HBoxContainer" parent="Context/Texts"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 28.0
offset_bottom = 28.0
alignment = 1

[node name="Press" type="Label" parent="Context/Texts/HBoxContainer"]
layout_mode = 2
text = "Press"

[node name="CenterContainer" type="CenterContainer" parent="Context/Texts/HBoxContainer"]
layout_mode = 2

[node name="AnyKey" type="Label" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "any key"

[node name="XboxA" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("4")

[node name="PlaystationX" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("5")

[node name="NintendoB" type="TextureRect" parent="Context/Texts/HBoxContainer/CenterContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("6")

[node name="ToStart" type="Label" parent="Context/Texts/HBoxContainer"]
layout_mode = 2
text = "to start"

[node name="Tween" type="Tween" parent="Context/Texts"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
repeat = true
playback/repeat = true
script = null

[node name="Tween" type="Tween" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
editor_description = ""
script = null

[node name="FadeLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="ScreenFader" parent="FadeLayer" instance=ExtResource("9")]
anchors_preset = 15
expand_mode = 1
duration_fade_out = 1.0

[node name="MenuSoundPlayer" parent="." instance=ExtResource("2")]
